--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
-    <title>My Personal Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <title>Portfolio Website</title>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Diifoz</a>
 
-    <h1>Ku soo dhawoow boggayga</h1>
-    <p>Kani waa website-kayga gaarka ah.</p>
-
+        <nav>
+            <a href="#" class="active"> Home</a>
+            <a href="#" >Services</a>
+            <a href="#" >Skills</a>
+            <a href="#" >Education</a>
+            <a href="#" >Experience</a>
+            <a href="#" >Contact</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="home-img">
+            <img src="images/main.jpg" alt="">
+        </div>
+        <div class="home-content">
+            <h1>Hi, It's <span>Diifoz</span></h1>
+            <h3 class="typing-text">I'm a <span></span></h3>
+            <p>Ku soo dhawoow boggayga gaarka ah. Waxaan ahay qof xiiseeya tiknoolajiyadda, horumarinta web-ka, iyo barashada xirfado cusub oo casri ah. Halkan waxaad ka heli doontaa macluumaad ku saabsan shaqadayda, mashruucyadayda, iyo sida aad iila soo xiriiri karto.</p>
+            <div class="social-icons">
+                <a href="https://www.tiktok.com/@abdiladiif_mohamed_1" target="_blank">
+        <i class="fa-brands fa-tiktok"></i>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/diifodiifo-dev" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://twitter.com/diifodiifo"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/_diifoz.x" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <a href="#" class="btn">Hire me</a>
+        </div>
+    </section>
 </body>
 </html>
